--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "paths": {
+      "#constants": ["constants"],
+      "#constants/*": ["constants/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
