feat: adds realm, item, auctions and commodities queries

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,5 +11,10 @@
       "#constants/*": ["src/constants/*"]
     }
   },
-  "include": ["scripts", "src/constants/**/*.ts"]
+  "include": ["scripts", "src/constants"],
+  "ts-node": {
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true,
+    "esm": true,
+  }
 }
