--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "nodeTS": "node -r ts-node/register --loader ts-node/esm --no-warnings",
     "nodeTS:debug": "pnpm nodeTS --inspect-brk",
     "ts:check": "tsc --noEmit",
-    "setClientAccessToken": "pnpm nodeTS scripts/wow-client-token.ts"
+    "setClientAccessToken": "pnpm nodeTS scripts/wow-client-token.ts",
+    "query": "pnpm nodeTS scripts/wow-queries.ts"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
+    "change-case": "^5.3.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.55.0",
     "prettier": "^3.1.1",
