--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,10 @@
   },
   "include": ["src"],
   "exclude": ["scripts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "ts-node": {
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true,
+    "esm": true,
+  }
 }
