--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
   "ts-node": {
     "experimentalSpecifierResolution": "node",
     "transpileOnly": true,
-    "esm": true,
+    "esm": true
   }
 }
