feat(build): adds script to install additional GIT hooks
Since we do not use Husky or similar 3rd party GIT hooks manager,
the files are by default ignored since they are under `.git/hooks`
folder. In order to commit such changes, a NodeJS script was needed,
hence `scripts/hooks.cjs` came to fruition which writes content to
both `post-merge` and `post-checkout` hook files when called.
Simply, invoke `npm run install:hooks` from the root folder and see
the changes yourself!

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/albannurkollari/wow-api#readme",
   "scripts": {
+    "prepare": "npm run install:hooks",
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -31,7 +32,8 @@
     "nodeTS:debug": "pnpm nodeTS --inspect-brk --watch",
     "ts:check": "tsc --noEmit",
     "setClientAccessToken": "pnpm nodeTS scripts/wow-client-token.ts",
-    "query": "pnpm nodeTS scripts/wow-queries.ts"
+    "query": "pnpm nodeTS scripts/wow-queries.ts",
+    "install:hooks": "node scripts/git-hooks.js"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
