--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodeTS:debug": "pnpm nodeTS --inspect-brk --watch",
     "ts:check": "tsc --noEmit",
     "setClientAccessToken": "pnpm nodeTS scripts/wow-client-token.ts",
-    "query": "pnpm nodeTS scripts/wow-queries.ts",
+    "query": "pnpm nodeTS scripts/wow.ts",
+    "fb-rares": "pnpm nodeTSscripts/wow-queries.ts --fb-rares",
     "install:hooks": "node scripts/git-hooks.js"
   },
   "devDependencies": {
