--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/albannurkollari/wow-api#readme",
   "scripts": {
-    "prepare": "npm run install:hooks",
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -33,17 +32,18 @@
     "ts:check": "tsc --noEmit",
     "setClientAccessToken": "pnpm nodeTS scripts/wow-client-token.ts",
     "query": "pnpm nodeTS scripts/wow.ts",
+    "query:debug": "pnpm nodeTS:debug scripts/wow.ts",
     "install:hooks": "node scripts/git-hooks.js"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@vitejs/plugin-basic-ssl": "^1.0.2",
-    "change-case": "^5.3.0",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.55.0",
-    "prettier": "^3.1.1",
+    "@types/node": "^20.11.6",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "change-case": "^5.4.2",
+    "dotenv": "^16.4.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
